sidebar: remove z-index as it's creating more issues than it's fixing

--- a/app/styles/layouts/_header.less
+++ b/app/styles/layouts/_header.less
@@ -43,7 +43,6 @@
   padding: 0;
   top: 0;
   width: 5em;
-  z-index: 9998;
   box-shadow: 10px 0 10px -10px rgba(0, 0, 0, 0.1);
 
   .logo-container {
